--- a/views/layout.pug
+++ b/views/layout.pug
@@ -15,6 +15,7 @@ html
     div(id="wrapper")
       nav
         h1 hello there :D
+        a(href="overview") overview
         a(href="/") keyphrase highlighter
         a(href="word-cloud") word cloud
 
