--- a/views/overview.pug
+++ b/views/overview.pug
@@ -6,7 +6,7 @@ block title
 block main
   div(class="content")
     p 
-      <b>Mozilla Foundation's London All Hands</b> brought together more than 100 people into 80+ session over 4 days. Our ideas manifested as 1000s of words on stickies and in Etherpads. 
+      <b>Mozilla Foundation's London All Hands</b> brought together more than 100 people into 80+ sessions over 4 days. Our ideas manifested as 1000s of words on stickies and in Etherpads. 
     p 
       | We dug into the etherpads and counted keywords to learn more about ourselves.
     h2 
@@ -85,13 +85,6 @@ block main
       li excited (11)
       li opportunities (11)
       li yay (6)
-    h2
-      | The work continues...
-    ul
-      li challenges (5)
-      li tbd (5)
     hr
     p
-      | With speedy contributions from Aurelia and Mavis, we put together a prototype to demonstrate how we can <a href="/">explore documentation</a> from our events. Take a look and then imagine if participants could include photos of whiteboards and post-its automatically tagged with session data?
-    p
-      | Share your <a href="https://github.com/mmmavis/docs-analyzer/issues">feedback or ideas</a> on this prototype or how you might use this with your events.
+      | Share your <a href="https://github.com/mmmavis/docs-analyzer/issues">feedback or ideas</a> on this prototype.
