--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -5,5 +5,8 @@ $blue-link: #08AFCF;
 $turquoise: #3FB8AF;
 $orange: #ff3c00;
 $hot-pink: #FF1660;
+$gecko-green: #7dc14c;
+$flame-yellow: #ffcd02;
+$market-orange: #f89c24;
 
 $container-padding: 2rem;
