--- a/views/home.pug
+++ b/views/home.pug
@@ -15,7 +15,7 @@ block main
               a(class="name" data-issue=issue.name data-keyphrases=issue.keyphrases.join(","))= issue.name
               div(class="tooltip")= "Keywords: " + issue.keyphrases.join(", ") 
           li
-            a(id="reset") Reset
+            a(id="reset" title="Show all etherpads") Reset
 
   div(id="etherpads-container" class="main-containers")
     div(id="etherpad-nav")
@@ -29,7 +29,7 @@ block main
           span  matches found in 
           span(id="etherpad-num-found")  
           span  Etherpads
-        div(class="help-text") Tap a topic on the left to filter etherpads.
+        div(class="help-text") Tap a topic on the left to filter etherpads below.
     div(id="etherpad-result")
       div(class="scanner-mask")
       ul
