Fixes #14 - switched to use mark.js as the highlighter library

--- a/scss/home.scss
+++ b/scss/home.scss
@@ -3,7 +3,7 @@ $etherpads-container-gap-width: calc( #{$search-container-width} + #{$container-
 $highlight-orange: adjust-hue($orange, 25);
 
 .page.home {
-  .highlight {
+  .marked {
     background: $highlight-orange;
   }
   footer {
