--- a/views/home.pug
+++ b/views/home.pug
@@ -3,7 +3,7 @@ extends ./layout.pug
 block title
   title Highlighter
 block otherScript
-  script(src="http://johannburkard.de/resources/Johann/jquery.highlight-5.js")
+  script(src="https://cdn.jsdelivr.net/mark.js/7.0.2/jquery.mark.min.js")
 
 block main
   div(id="search-container" class="main-containers")
